--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<header class="major">
 										<h3>About</h3>
 									</header>
-									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a student at Western Michigan University studying to earn his Bachelor of Fine Arts in Theatre: Design and Technical Productions, with an emphasis in Sound Design and Audio Engineering.</p>
+									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer who recently graduated with a BFA from Western Michigan University, and is currently working on Bronco Way at WMU and the <a href="http://www.kindleberger.org/festival.php">Kindleberger Summer Festival of the Performing Arts</a>.</p>
 								</div>
 							</section>
 
@@ -306,7 +306,7 @@
 									<p><a href="http://www.facebook.com/TommySinshackSound">Social Networking</a></p>
 								</li>
 									</ul>
-								<form method="post" action="/cgi-bin/gform" NAME="Comments">
+								<form method="post" action="http://formspree.io/tommy.sinshack+website@gmail.com" NAME="Comments">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
 												<input type="text" name="name" id="demo-name" value="" placeholder="Name" required/>
