--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<h3>Resume</h3>
 									<div class="features">
 										<article>
-											<a href="http://homepages.wmich.edu/~tyd2708/Resume.pdf" class="image"><img src="images/pic01.jpg" alt="" />
+											<a href="Resume.pdf" class="image"><img src="images/pic01.jpg" alt="" />
 											<div class="inner">
 												<h4>Click here to access my Resume</h4></a>
 											</div>
@@ -188,9 +188,9 @@
 											<p></p>
 											<a href="#" class="image"><img src="images/Showboat2.jpg" alt="" /></a>
 											<div class="inner">
-											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As a part of my design, I decided to record the production in 16 channels, split by groups of vocalists and instruments, with the goal of creating a 5.1 surround sound mix of "Old Man River" as a project for the Theatre Department's Advanced Design course.  The 5.1 surround sound recording and a stereo mixdown of that project are within the playlist of recordings and sound effects below. Photo Credit: Dave Nofsinger.</p></div>
+											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Photo Credit: Dave Nofsinger.</p></div>
 											<div style="text-align:center">
-											<p><h5><a href="http://homepages.wmich.edu/~tyd2708/ShowboatSound.pdf">Design Documentation</a></h5></p>
+											<p><h5><a href="ShowboatSound.pdf">Design Documentation</a></h5></p>
 											</div>
 											<div style="text-align:center"><iframe width="100%" height="400" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/296632095&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>	
 										</article>
@@ -218,7 +218,7 @@
 											<div class="inner">
 											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;During the performance, three men enter the stage by rapelling in from above.  While this is going on, an actress is giving a speech and loud music plays in the background.  Panning is used in this sample to demonstrate the use of different speaker systems, with the right being above the stage and the left being behind and above the set. Photo: Bryson Kiser.</p></div>
 											<div style="text-align:center">
-											<p><h5><a href="http://homepages.wmich.edu/~tyd2708/BigLove.pdf">Design Documentation</a></h5></p>
+											<p><h5><a href="BigLove.pdf">Design Documentation</a></h5></p>
 											</div>
 											<div style="text-align:center"><iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259336808%3Fsecret_token%3Ds-fDV1P&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>	
 										</article>
