--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 											</div>
 											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A Live-to-2-track recording of an arrangement of "Edge of Glory".  Arrangement by Nich Mueller for the WMU Musical Theatre Showcase, 2015; vocalists Chase Gray, Audrey Leigh Johnston, Matthew Kurzniec, Emily McKay, Lindsay Powers, and Payton Reilly.  Guitar performed by Ian Everitt, bass performed by Evan Applegate, and drums performed by Julian Faraon.
 											<div style="text-align:center">
-											<h5><a href="http://homepages.wmich.edu/~tyd2708/LiveTo2.pdf">Project Documentation</a></h5>
+											<h5><a href="LiveTo2.pdf">Project Documentation</a></h5>
 											</div>
 											</p>
 											<div style="text-align:center"><iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259285396%3Fsecret_token%3Ds-Cm2Eg&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>
