New resume and link to it

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 									<h3>Resume</h3>
 									<div class="features">
 										<article>
-											<a href="Resume.pdf" class="image"><img src="images/pic01.jpg" alt="" />
+											<a href="TommySinshackResume.pdf" class="image"><img src="images/pic01.jpg" alt="" />
 											<div class="inner">
 												<h4>Click here to access my Resume</h4></a>
 											</div>
 										</article>
-										<table>
+										<!--<table>
 										<tr>
  										   <th>Mostly Medieval Theatre Festival</th>
  										   <th>Sound Design</th>
@@ -141,7 +141,7 @@
  										    <th>York, WMU</th>
  										    <th>2015</th>
 										  </tr>
-										</table>
+										</table>!-->
 										<!--<article>
 											<a href="http://homepages.wmich.edu/~tyd2708/Portfolio.pdf" class="image"><img src="images/pic02.jpg" alt="" />
 											<div class="inner">
