Bitcoin link in SCOT

--- a/SCOT/index.html
+++ b/SCOT/index.html
@@ -145,6 +145,7 @@
 											<ul class="icons">
 												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
+												<li><a href="http://www.freebiebitcoin.com">Earn free bitcoin</a></li>
 												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
 											</ul>
 										</li>
