--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<header class="major">
 										<h3>About</h3>
 									</header>
-									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer who recently graduated with a BFA from Western Michigan University, and is currently working on Bronco Way at WMU and the <a href="http://www.kindleberger.org/festival.php">Kindleberger Summer Festival of the Performing Arts</a>.</p>
+									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer who recently graduated with a BFA from Western Michigan University, and is currently working on <a href="https://www.kazoocivic.com/young-frankenstein-2017-2018">Young Frankenstein at the Kalamazoo Civic Theatre.</a>.</p>
 								</div>
 							</section>
 
