--- a/index.html
+++ b/index.html
@@ -357,4 +357,14 @@
 
 <!--gform deliver=mail "tommy.sinshack@gmail.com" subject="Website Contact"-->
 	</body>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110829417-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110829417-1');
+</script>
+
 </html>
