--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<header class="major">
 										<h3>About</h3>
 									</header>
-									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer who recently graduated with a BFA from Western Michigan University.  Tommy is currently a Sound Technician for Royal Caribbean International aboard the Navigator of the Seas, setting sail December 31, 2017 and returning July 22, 2018.</p>
+									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer from Shelby Township, Michigan.  Tommy is currently a Sound Technician for Royal Caribbean International aboard the Jewel of the Seas, setting sail December 1, 2018 and returning June 23, 2019.</p>
 								</div>
 							</section>
 
