--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<header class="major">
 										<h3>About</h3>
 									</header>
-									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer who recently graduated with a BFA from Western Michigan University.  Tommy is currently a Sound Technician for Royal Caribbean International aboard the Navigator of the Seas, setting sail December 31, 2017 and returning July 22, 2018.</p>
+									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer based out of Las Vegas, Nevada.  Tommy is currently a Sound Technician for Royal Caribbean International, and most recently was aboard the Independence of the Seas, mixing the Broadway musical 'Grease' and was the Head Sound &amp; Light Technician onboard.</p>
 								</div>
 							</section>
 
@@ -166,7 +166,7 @@
 											<div class="inner">
 											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Motown meets the yellow brick road in this Tony Award-winning musical that needs no introduction! Production running April 7-22 in Western Michigan University's D. Terry Williams Theatre.</p></div>
 											<div style="text-align:center">
-											<p><h5><a href="http://www.wmich.edu/theatre/wiz">Production Information and Show Times</a></h5></p>
+											<p><h5><a href="WizSound.pdf">Production Documentation</a></h5></p>
 											</div>
 											<!--
 											<div style="text-align:center">
