--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.facebook.com/TommySinshackSound" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+						<!-- <li><a href="https://www.facebook.com/TommySinshackSound" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li> -->
 						<li><a href="https://www.linkedin.com/pub/tommy-sinshack/9b/141/39a" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://twitter.com/TommySinshack" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="mailto:tommy.sinshack@gmail.com?subject=Website Contact" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
@@ -301,10 +301,10 @@
 									<h3>LinkedIn</h3>
 									<p><a href="https://www.linkedin.com/pub/tommy-sinshack/9b/141/39a">Professional Networking</a></p>
 								</li>
-								<li class="icon alt fa-facebook">
+								<!-- <li class="icon alt fa-facebook">                           *******UNTIL NEW FACEBOOK PAGE MADE*******
 									<h3>Facebook</h3>
 									<p><a href="http://www.facebook.com/TommySinshackSound">Social Networking</a></p>
-								</li>
+								</li> -->
 									</ul>
 								<form method="post" action="http://formspree.io/tommy.sinshack+website@gmail.com" NAME="Comments">
 										<div class="row uniform">
