--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
 									<div class="features">
 										<article>
 											<div style="text-align:center">
+											<h4>Grease</h4>
+											</div>
+											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixing musicals has its own challanges - and those challanges are certainly more pronounced when these shows are performed at sea.  I spent 6 months onboard the Independence of the Seas, and fulfilled the challange presented when I came onboard of learning and mixing an intense hour and a half hour version of 'Grease' in 14 days.  Sustaining a show at sea has presented many challanges and has made me more proficient in troubleshooting, repairing, and maintaining such a complex show.</p>
+											<div style="text-align:center">
+											<iframe width="100%" height="439" src="https://www.youtube.com/embed/ed7E5u1MwzE" frameborder="0" allowfullscreen></iframe>
+											</div>
+											<!--
+											<div style="text-align:center"><iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259336808%3Fsecret_token%3Ds-fDV1P&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>	
+										-->
+										</article>
+										<article>
+											<div style="text-align:center">
 											<h4>The Wiz</h4>
 											<p></p>
 											</div>
