--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<header class="major">
 										<h3>About</h3>
 									</header>
-									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer based out of Las Vegas, Nevada.  Tommy is currently a Sound Technician for Royal Caribbean International, and most recently was aboard the Independence of the Seas, mixing the Broadway musical 'Grease' and was also the Head Sound &amp; Light Technician onboard.</p>
+									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer based out of Las Vegas, Nevada.  Tommy is currently a part of the take out team for Royal Caribbean's newest ship, Odyssey of the Seas, as the Sound Technician starting up the Music Hall and moving to operating the unique Two70 venue in August.</p>
 								</div>
 							</section>
 
@@ -157,18 +157,6 @@
 									<h3>Sound Design</h3>
 									<!--<p>Samples of my sound design work as a student at Western Michigan University</p>-->
 									<div class="features">
-										<article>
-											<div style="text-align:center">
-											<h4>Grease</h4>
-											</div>
-											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixing musicals has its own challanges - and those challanges are certainly more pronounced when these shows are performed at sea.  I spent 6 months onboard the Independence of the Seas, and fulfilled the challange presented when I came onboard of learning and mixing an intense hour and a half hour version of 'Grease' in 14 days.  Sustaining a show at sea has presented many challanges and has made me more proficient in troubleshooting, repairing, and maintaining such a complex show.</p>
-											<div style="text-align:center">
-											<iframe width="100%" height="439" src="https://www.youtube.com/embed/ed7E5u1MwzE" frameborder="0" allowfullscreen></iframe>
-											</div>
-											<!--
-											<div style="text-align:center"><iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259336808%3Fsecret_token%3Ds-fDV1P&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>	
-										-->
-										</article>
 										<article>
 											<div style="text-align:center">
 											<h4>The Wiz</h4>
@@ -260,6 +248,18 @@
 									<h3>Audio Engineering</h3>
 									<p>Samples of my work as an audio engineer.</p>
 									<div class="features">
+										<article>
+											<div style="text-align:center">
+											<h4>Grease</h4>
+											</div>
+											<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mixing musicals has its own challanges - and those challanges are certainly more pronounced when these shows are performed at sea.  I spent 6 months onboard the Independence of the Seas, and fulfilled the challange presented when I came onboard of learning and mixing an intense hour and a half hour version of 'Grease' in 14 days.  Sustaining a show at sea has presented many challanges and has made me more proficient in troubleshooting, repairing, and maintaining such a complex show.</p>
+											<div style="text-align:center">
+											<iframe width="100%" height="439" src="https://www.youtube.com/embed/ed7E5u1MwzE" frameborder="0" allowfullscreen></iframe>
+											</div>
+											<!--
+											<div style="text-align:center"><iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/259336808%3Fsecret_token%3Ds-fDV1P&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"></iframe></div>	
+										-->
+										</article>
 										<article>
 											<div style="text-align:center">
 											<h4>Advanced 2 Recording Project - Live to 2 Track</h4>
