--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<header class="major">
 										<h3>About</h3>
 									</header>
-									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer based out of Las Vegas, Nevada.  Tommy is currently an Audio Technician for Cirque Du Soleil's Resident Show Division in Las Vegas, working on KA.</p>
+									<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tommy Sinshack is a Musical Theatre Sound Designer and Audio Engineer based out of Las Vegas, Nevada.  Tommy is currently an Audio Technician for Cirque Du Soleil's Resident Show Division in Las Vegas, working on Cirque's newest production on the strip: Mad Apple!</p>
 								</div>
 							</section>
 
