--- a/DavisSinshack/index.html
+++ b/DavisSinshack/index.html
@@ -87,7 +87,7 @@
 									<h2><a href="https://10kbrew.com/">10K Brewing Company</a></h2>
 									<p>Anoka, Minnesota</p>
 								</header>
-								<div class="feature-list">
+								<!-- <div class="feature-list">
 									<div class="row">
 										<div class="col-6 col-12-medium">
 											<section>
@@ -126,10 +126,10 @@
 											</section>
 										</div>
 									</div>
-								</div>
+								</div> -->
 								<ul class="actions special">
-									<li><a href="#" class="button style1 large">Get Started</a></li>
-									<li><a href="#" class="button style2 large">More Info</a></li>
+									<li><a href="mailto:rsvp@davissinshack.com" class="button style1 large">Email us!</a></li>
+									<li><a href="http://https://anokahalloween.com/" class="button style2 large">Anoka Halloween</a></li>
 								</ul>
 							</section>
 
@@ -138,7 +138,7 @@
 
 			<!-- Highlights -->
 				<section id="highlights" class="wrapper style3">
-					<div class="title">The Endorsements</div>
+					<div class="title">Where to stay?</div>
 					<div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
@@ -177,13 +177,13 @@
 
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
-					<div class="title">The Rest Of It</div>
+					<div class="title">Questions?</div>
 					<div class="container">
 						<header class="style1">
 							<h2>Ipsum sapien elementum portitor?</h2>
 							<p>
-								Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-								Nam pharetra laoreet imperdiet volutpat etiam feugiat.
+								Please feel free to reach out to us below<br />
+								should you have any questions.
 							</p>
 						</header>
 						<div class="row">
@@ -218,7 +218,7 @@
 								<!-- Contact -->
 									<section class="feature-list small">
 										<div class="row">
-											<div class="col-6 col-12-small">
+											<!-- <div class="col-6 col-12-small">
 												<section>
 													<h3 class="icon solid fa-home">Mailing Address</h3>
 													<p>
@@ -237,12 +237,12 @@
 														<a href="#">facebook.com/untitled</a>
 													</p>
 												</section>
-											</div>
+											</div> -->
 											<div class="col-6 col-12-small">
 												<section>
 													<h3 class="icon solid fa-envelope">Email</h3>
 													<p>
-														<a href="#">info@untitled.tld</a>
+														<a href="#">info@davissinshack.com</a>
 													</p>
 												</section>
 											</div>
@@ -250,7 +250,7 @@
 												<section>
 													<h3 class="icon solid fa-phone">Phone</h3>
 													<p>
-														(000) 555-0000
+														(586) 221-3223
 													</p>
 												</section>
 											</div>
@@ -261,7 +261,7 @@
 						</div>
 						<div id="copyright">
 							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Davis-Sinshack.</li><li>Design: <a href="http://html5up.net">HTML5 UP. Modified.</a></li>
 							</ul>
 						</div>
 					</div>
