--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 									<ul class="feature-icons">
 										<li class="icon fa-envelope-o">
 									<h3>Email</h3>
-									<p><a href="mailto:tommy.sinshack@gmail.com?subject=Website Contact">Tommy.Sinshack@gmail.com</a><br><a href="mailto:thomas.j.sinshack@wmich.edu?subject=Website Contact">Thomas.j.Sinshack@wmich.edu</a></p>
+									<p><a href="mailto:tommy.sinshack@gmail.com?subject=Website Contact">Tommy.Sinshack@gmail.com</a><br></p>
 								</li>
 								<li class="icon alt fa-phone">
 									<h3>Phone</h3>
